--- a/lang/english.lng
+++ b/lang/english.lng
@@ -456,6 +456,7 @@ STR_REFIT_JNR_LOGO	: {WHITE}JNR{BLACK} Large Logo
 STR_REFIT_JRF_RED	: {WHITE}JR Freight{BLACK} Red
 STR_REFIT_JRF_BLUE	: {WHITE}JR Freight{BLACK} Blue
 STR_REFIT_JRF_REFIT	: {WHITE}JR Freight{BLACK} Refurbished
+STR_REFIT_JRF_NLOGO	: {WHITE}JR Freight{BLACK} No Logo
 STR_REFIT_SILVER	: {WHITE}JR Freight{BLACK} Silver
 STR_REFIT_JRF_YELLOW	: {WHITE}JR Freight{BLACK} Red/Yellow
 STR_REFIT_JRF_PINK		: {WHITE}JR Freight{BLACK} Pink/Orange
@@ -540,12 +541,8 @@ STR_REFIT_EF60_NEW		: {SILVER}EF60{WHITE} JNR{BLACK} Blue {GOLD}(New Shape)
 STR_REFIT_EF60_AMERICAN	: {SILVER}EF60{WHITE} JR East{BLACK} "American Train"
 STR_REFIT_EF60_YASURAGI	: {SILVER}EF60{WHITE} JR East{BLACK} "Yasuragi"
 
-STR_REFIT_EF64_1_BROWN	: {SILVER}EF64-1000{WHITE} JNR{BLACK} Brown
-STR_REFIT_EF64_1_BLUE	: {SILVER}EF64-1000{WHITE} JNR{BLACK} Blue
-STR_REFIT_EF64_1_REFIT	: {SILVER}EF64-1000{WHITE} JR Freight{BLACK} Refurbished
-STR_REFIT_EF64_1_STRIPE	: {SILVER}EF64-1000{WHITE} JR Freight{BLACK} Stripe
-STR_REFIT_EF64_1_SLOGO	: {SILVER}EF64-1000{WHITE} JR Freight{BLACK} Stripe with Logo
-STR_REFIT_EF64_1_LLOGO	: {SILVER}EF64-1000{WHITE} JR Freight{BLACK} Large Logo
+STR_REFIT_EF64_0        : {SILVER}EF64-0
+STR_REFIT_EF64_1000     : {SILVER}EF64-1000
 
 STR_REFIT_DD51_EXP1	: {WHITE}JR Freight {BLACK}Experimental Blue/Red
 STR_REFIT_DD51_EXP2	: {WHITE}JR Freight {BLACK}Experimental Blue/White
