--- a/lang/english.lng
+++ b/lang/english.lng
@@ -312,6 +312,7 @@ STR_NAME_SEKI_1			:SEKI 1 / Otese 9500 Hopper
 STR_NAME_SEKI_1000		:SEKI 1000 Covered Hopper
 STR_NAME_SEKI_3000		:SEKI 3000 / 6000 Hopper
 STR_NAME_HOKI_650		:HOKI 650 Covered Hopper
+STR_NAME_HOKI_800		:HOKI 800 Hopper
 STR_NAME_HOKI_1000		:HOKI 1000 Covered Hopper
 STR_NAME_HOKI_2200		:HOKI 2200 Grain Hopper
 STR_NAME_HOKI_2500		:HOKI 2500 / 9500 Covered Hopper
