--- a/lang/english.lng
+++ b/lang/english.lng
@@ -82,10 +82,11 @@ STR_NAME_MAIL_KONI_8890	:KONI 8890 Luggage Van
 STR_NAME_MAIL_HONI_8900	:HONI 8900 Luggage Van
 
 STR_NAME_MAIL_MANI_31	:MAYU 33 Mail Van
-STR_NAME_OYU_10			:OYU 10 Mail Van
+STR_NAME_MAIL_OYU_10	:OYU 10 Mail Van
 STR_NAME_MAIL_15		:SUYU 15 Mail Van
 STR_NAME_MAIL_50		:MANI 50 Express Van
 STR_NAME_MAIL_44		:MANI 44 Express Van
+STR_NAME_MAIL_MANI_34	:MANI 34 Armoured Van
 STR_NAME_MAIL_30		:MANI 30 Armoured Van
 STR_NAME_MAIL_8000		:SUNI 40 / SUYU 44 / WAKI 8000 Express Van
 
@@ -105,7 +106,7 @@ STR_REFIT_MAYU_33		: {SILVER}MAYU 33{BLACK} Mail Van
 STR_REFIT_MANI_31		: {SILVER}MANI 31{BLACK} Luggage Van
 STR_REFIT_SUHANE_31_JGR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown/Red)
 STR_REFIT_SUHANE_31_JNR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown)
-
+STR_REFIT_MAIL_MANI34	: {SILVER}MANI 34{BLACK}
 
 STR_REFIT_SUNI_40		: {SILVER}SUNI 40{BLACK} Luggage Van
 STR_REFIT_SUYU_44		: {SILVER}SUYU 44{BLACK} Mail Van
@@ -175,7 +176,7 @@ STR_SUFFIX_SLEEPER_GREEN		: Green Car Sleeper
 
 STR_SUFFIX_GENERATOR			: Generator Van
 STR_SUFFIX_INSPECTION			: Inspection Car
-
+STR_SUFFIX_ARMOURED				: Armoured Van
 
 #################
 #COLOUR SUFFIXES#
@@ -384,7 +385,8 @@ STR_SUFFIX_ORIGINAL	:Original
 STR_SUFFIX_YEARDEP	:{GREEN}Year-Dependent{BLACK}
 STR_SUFFIX_RANDOM	:{GREEN}Random{BLACK}
 
-
+STR_SUFFIX_OLDSHAPE	:(Old Shape)
+STR_SUFFIX_NEWSHAPE	:(New Shape)
 
 
 
