hopper refit/capacity tweaks

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -315,7 +315,7 @@ STR_NAME_HOKI_650		:HOKI 650 Covered Hopper
 STR_NAME_HOKI_800		:HOKI 800 Hopper
 STR_NAME_HOKI_1000		:HOKI 1000 Covered Hopper
 STR_NAME_HOKI_2200		:HOKI 2200 Grain Hopper
-STR_NAME_HOKI_2500		:HOKI 2500 / 9500 Covered Hopper
+STR_NAME_HOKI_2500		:HOKI 2500 / 9500 Lidded Hopper
 STR_NAME_HOKI_8300		:HOKI 8300 / 9300 Covered Hopper
 STR_NAME_HOKI_8500		:HOKI 8500 Hopper
 STR_NAME_HOKI_10000		:HOKI 10000 Hopper
