suyu 42 mail van

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -84,6 +84,7 @@ STR_NAME_MAIL_HONI_8900	:HONI 8900 Luggage Van
 STR_NAME_MAIL_MANI_31	:MAYU 33 Mail Van
 STR_NAME_MAIL_OYU_10	:OYU 10 Mail Van
 STR_NAME_MAIL_15		:SUYU 15 Mail Van
+STR_NAME_MAIL_SUYU42   :SUYU 42 Mail Van
 STR_NAME_MAIL_50		:MANI 50 Express Van
 STR_NAME_MAIL_44		:MANI 44 Express Van
 STR_NAME_MAIL_MANI_34	:MANI 34 Armoured Van
@@ -101,12 +102,19 @@ STR_REFIT_PAX_HA4995		: {SILVER}HA 4995{BLACK}
 STR_REFIT_PAX_HABU3			: {SILVER}HABU 3{BLACK}
 STR_REFIT_PAX_RO481			: {SILVER}RO 481{BLACK}
 STR_REFIT_MAIL_HANI1		: {SILVER}HANI 1{BLACK}
+STR_REFIT_MAIL_MANI34	    : {SILVER}MANI 34{BLACK}
+STR_REFIT_MAIL_MANI35       : {SILVER}MANI 35{BLACK}
+STR_REFIT_MAIL_MANI36       : {SILVER}MANI 36{BLACK}
+STR_REFIT_MAIL_SUYU42       : {SILVER}SUYU 42{BLACK}
+STR_REFIT_MAIL_SUYU43       : {SILVER}SUYU 43{BLACK}
+
 
 STR_REFIT_MAYU_33		: {SILVER}MAYU 33{BLACK} Mail Van
 STR_REFIT_MANI_31		: {SILVER}MANI 31{BLACK} Luggage Van
 STR_REFIT_SUHANE_31_JGR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown/Red)
 STR_REFIT_SUHANE_31_JNR	: {SILVER}SUHANE 31{BLACK} Combine Coach (Brown)
-STR_REFIT_MAIL_MANI34	: {SILVER}MANI 34{BLACK}
+
+
 
 STR_REFIT_SUNI_40		: {SILVER}SUNI 40{BLACK} Luggage Van
 STR_REFIT_SUYU_44		: {SILVER}SUYU 44{BLACK} Mail Van
@@ -177,24 +185,26 @@ STR_SUFFIX_SLEEPER_GREEN		: Green Car Sleeper
 STR_SUFFIX_GENERATOR			: Generator Van
 STR_SUFFIX_INSPECTION			: Inspection Car
 STR_SUFFIX_ARMOURED				: Armoured Van
+STR_SUFFIX_MAIL                 : Mail Van
+STR_SUFFIX_LUGGAGE              : Luggage Van
 
 #################
 #COLOUR SUFFIXES#
 #################
-STR_SUFFIX_BLACK			:{PURPLE}Black
-STR_SUFFIX_BLACK_YELLOW		:{PURPLE}Black/Yellow
-STR_SUFFIX_GREEN			:{PURPLE}Green
-STR_SUFFIX_BROWN			:{PURPLE}Brown
-STR_SUFFIX_BROWN_BLUE		:{PURPLE}Brown/Blue
-STR_SUFFIX_BROWN_RED		:{PURPLE}Brown/Red
-STR_SUFFIX_BROWN_CREAM		:{PURPLE}Brown/Cream
-STR_SUFFIX_BROWN_GREEN		:{PURPLE}Brown/Green
-STR_SUFFIX_BLUE				:{PURPLE}Blue
-STR_SUFFIX_BLUE_GREEN		:{PURPLE}Blue/Green
-STR_SUFFIX_BLUE_WHITE		:{PURPLE}Blue/White
-STR_SUFFIX_BLUE_YELLOW		:{PURPLE}Blue/Yellow
+STR_SUFFIX_BLACK			:{BLACK}Black
+STR_SUFFIX_BLACK_YELLOW		:{BLACK}Black/Yellow
+STR_SUFFIX_GREEN			:{GREEN}Green
+STR_SUFFIX_BROWN			:{BROWN}Brown
+STR_SUFFIX_BROWN_BLUE		:{BROWN}Brown/Blue
+STR_SUFFIX_BROWN_RED		:{BROWN}Brown/Red
+STR_SUFFIX_BROWN_CREAM		:{BROWN}Brown/Cream
+STR_SUFFIX_BROWN_GREEN		:{BROWN}Brown/Green
+STR_SUFFIX_BLUE				:{BLUE}Blue
+STR_SUFFIX_BLUE_GREEN		:{BLUE}Blue/Green
+STR_SUFFIX_BLUE_WHITE		:{BLUE}Blue/White
+STR_SUFFIX_BLUE_YELLOW		:{BLUE}Blue/Yellow
 
-STR_SUFFIX_RED				:{PURPLE}Red
+STR_SUFFIX_RED				:{RED}Red
 STR_SUFFIX_CC				:{GREEN}Company Coloured
 
 #########
@@ -385,8 +395,8 @@ STR_SUFFIX_ORIGINAL	:Original
 STR_SUFFIX_YEARDEP	:{GREEN}Year-Dependent{BLACK}
 STR_SUFFIX_RANDOM	:{GREEN}Random{BLACK}
 
-STR_SUFFIX_OLDSHAPE	:(Old Shape)
-STR_SUFFIX_NEWSHAPE	:(New Shape)
+STR_SUFFIX_OLDSHAPE	:{SILVER}(Old Shape)
+STR_SUFFIX_NEWSHAPE	:{SILVER}(New Shape)
 
 
 
