--- a/lang/english.lng
+++ b/lang/english.lng
@@ -2,7 +2,7 @@
 
 lang: 7F
 
-STR_GRF_NAME :JP+ Engines & Wagons v0.10.9 
+STR_GRF_NAME :JP+ Engines & Wagons v0.10.10
 STR_GRF_DESCRIPTION :An addon for Japan Set Trains, focused on locomotives and wagons. Includes many new locos and livery refits. Drawn by Emperor Jake, Voyager One, Doorslammer, wicket-303, *SaYa*, Azusa257, andythenorth and the JapanSet Team. Coded by Emperor Jake, 2022 GPLv2+.
 
 STR_PARAM_NAME_BASECOSTMODBUY	:Purchase costs
@@ -17,7 +17,9 @@ STR_PARAM_NORMAL	:Normal
 STR_PARAM_HIGH		:High
 STR_PARAM_VHIGH		:Very High
 
-STR_ERROR_JAPANSETTRAINS	:Must be loaded after Japan Set 3: Trains!
+STR_ERROR_JAPANSETTRAINS_LOADORDER	:Must be loaded after JapanSet 3 Trains!
+STR_ERROR_JAPANSETTRAINS_REQUIRES	:JP+ Engines requires JapanSet 3 Trains to work!
+STR_ERROR_JAPANSETTRAINS	:JapanSet 3 Trains
 
 STR_ERROR_JPPLUSSET			:Must be loaded after JP+ Set!
 
