hoki 5700 covered hopper

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -48,7 +48,7 @@ STR_NAME_JNR_ED70	:ED70 (electric)
 STR_NAME_JNR_ED75	:ED75 / ED79 (electric)
 STR_NAME_JNR_ED76	:ED76 (electric)
 STR_NAME_JGR_EF50	:EF50 (electric)
-STR_NAME_JNR_EF53	:EF53 / EF59 (electric)
+STR_NAME_JNR_EF53	:EF53 (electric)
 STR_NAME_JNR_EF57	:EF57 (electric)
 STR_NAME_JNR_EH10	:EH10 (electric)
 
@@ -330,6 +330,7 @@ STR_NAME_HOKI_800		:HOKI 800 Hopper
 STR_NAME_HOKI_1000		:HOKI 1000 Covered Hopper
 STR_NAME_HOKI_2200		:HOKI 2200 Grain Hopper
 STR_NAME_HOKI_2500		:HOKI 2500 / 9500 Lidded Hopper
+STR_NAME_HOKI_5700		:HOKI 5700 / 7500 Covered Hopper
 STR_NAME_HOKI_8300		:HOKI 8300 / 9300 Covered Hopper
 STR_NAME_HOKI_8500		:HOKI 8500 Hopper
 STR_NAME_HOKI_10000		:HOKI 10000 Hopper
