eb10 ab10 black livery

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -67,6 +67,7 @@ STR_NAME_PAX_FUKOHA7945	:FUKOHA 7945 Passenger Coach
 STR_NAME_PAX_HOHA6810	:HOHA 6810 Passenger Coach
 STR_NAME_PAX_OHA31		:OHA 31 Passenger Coach
 STR_NAME_PAX_SUHA32		:SUHA 32 Passenger Coach
+STR_NAME_PAX_OHA35		:OHA 35 Passenger Coach
 STR_NAME_PAX_SUHA43		:SUHA 43 Passenger Coach
 STR_NAME_PAX_SUHA44		:SUHA 44 Passenger Coach {GOLD}"Tokaidō"{BLACK}
 STR_NAME_SLEEPER_10		:10 Series Passenger Coach
