ALUM support for AXIS

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -457,6 +457,7 @@ STR_REFIT_FLOGO		:, Logo
 
 STR_REFIT_HCC		: {WHITE}Hokkaido Coal Company{BLACK}
 STR_REFIT_SEIBU		: {WHITE}Seibu Railway{BLACK} Red/Cream
+STR_REFIT_OIGAWA    : {WHITE}Oigawa Railway{GREEN} Green
 
 STR_REFIT_JGR		: {WHITE}JGR{BLACK} Brown
 STR_REFIT_JGR_BLACK	: {WHITE}JGR{BLACK} Black
