--- a/lang/english.lng
+++ b/lang/english.lng
@@ -41,8 +41,10 @@ STR_NAME_JNR_EF60	:EF60 (electric)
 STR_NAME_JNR_EF63	:EF63 (electric)
 STR_NAME_JNR_EF70	:EF70 (electric)
 STR_NAME_JNR_EF80	:EF80 (electric)
+STR_NAME_JNR_ED12	:ED12 (electric)
 STR_NAME_JNR_ED16	:ED16 (electric)
 STR_NAME_JNR_ED53	:ED53 (electric)
+STR_NAME_JNR_ED54	:ED54 (electric)
 STR_NAME_JNR_ED62	:ED61 / ED62 (electric)
 STR_NAME_JNR_ED70	:ED70 (electric)
 STR_NAME_JNR_ED75	:ED75 / ED79 (electric)
@@ -61,6 +63,7 @@ STR_NAME_DEKI_400	:DeKi 400 (electric)
 STR_NAME_EL120		:EL120 (electric)
 STR_NAME_SEIBU_E851	:E851 (electric)
 STR_NAME_SEIBU_E31	:E31 (electric)
+STR_NAME_SEIBU_E51	:E51 (electric)
 
 STR_NAME_PAX_HA4995		:HA 4995 Passenger Coach
 STR_NAME_PAX_FUKOHA7945	:FUKOHA 7945 Passenger Coach
