more early electric variants

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -35,6 +35,8 @@ STR_NAME_JNR_DD16	:DD16 (diesel)
 STR_NAME_JNR_DD54	:DD54 (diesel)
 STR_NAME_JNR_AB10	:AB10 (battery)
 STR_NAME_JNR_EB10	:EB10 (electric)
+STR_NAME_JNR_EF10_2	:EF10 Late series (electric)
+STR_NAME_JNR_EF13_2	:EF13 Rebuild (electric)
 STR_NAME_JNR_EF15	:EF15 (electric)
 STR_NAME_JNR_EF30	:EF30 (electric)
 STR_NAME_JNR_EF60	:EF60 (electric)
@@ -43,6 +45,8 @@ STR_NAME_JNR_EF70	:EF70 (electric)
 STR_NAME_JNR_EF80	:EF80 (electric)
 STR_NAME_JNR_ED12	:ED12 (electric)
 STR_NAME_JNR_ED16	:ED16 (electric)
+STR_NAME_JNR_ED19	:ED19 (electric)
+STR_NAME_JNR_ED50	:ED50 (electric)
 STR_NAME_JNR_ED53	:ED53 (electric)
 STR_NAME_JNR_ED54	:ED54 (electric)
 STR_NAME_JNR_ED62	:ED61 / ED62 (electric)
