--- a/lang/english.lng
+++ b/lang/english.lng
@@ -35,8 +35,8 @@ STR_NAME_JNR_DD16	:DD16 (diesel)
 STR_NAME_JNR_DD54	:DD54 (diesel)
 STR_NAME_JNR_AB10	:AB10 (battery)
 STR_NAME_JNR_EB10	:EB10 (electric)
-STR_NAME_JNR_EF10_2	:EF10 Early form (electric)
-STR_NAME_JNR_EF13_2	:EF13 Early form (electric)
+STR_NAME_JNR_EF10_2	:EF10 New type (electric)
+STR_NAME_JNR_EF13_2	:EF13 New type (electric)
 STR_NAME_JNR_EF15	:EF15 (electric)
 STR_NAME_JNR_EF30	:EF30 (electric)
 STR_NAME_JNR_EF60	:EF60 (electric)
@@ -58,8 +58,12 @@ STR_NAME_JNR_EF53	:EF53 (electric)
 STR_NAME_JNR_EF56	:EF56 (electric)
 STR_NAME_JNR_EF57	:EF57 (electric)
 STR_NAME_JNR_EF57_2	:EF57 Prototype (electric)
+STR_NAME_JNR_EF58_2	:EF58 Old type (electric)
+STR_NAME_JNR_EF18	:EF18 (electric)
 STR_NAME_JNR_EF59	:EF59 Banker (electric)
 STR_NAME_JNR_EH10	:EH10 (electric)
+STR_NAME_JNR_EH10_2	:EH10 Prototype (electric)
+STR_NAME_JNR_EH50	:EH50 (electric)
 
 STR_NAME_JR_DF200	:DF200 (diesel)
 STR_NAME_JR_EF500	:EF500 (electric)
@@ -485,7 +489,7 @@ STR_REFIT_TOKKYU	: {WHITE}JNR{BLACK} Blue/Cream {GOLD}"Tokkyu"{BLACK}
 STR_REFIT_JNR_LOGO	: {WHITE}JNR{BLACK} Large Logo
 STR_REFIT_JRF_RED	: {WHITE}JR Freight{BLACK} Red
 STR_REFIT_JRF_BLUE	: {WHITE}JR Freight{BLACK} Blue
-STR_REFIT_JRF_REFIT	: {WHITE}JR Freight{BLACK} Refurbished
+STR_REFIT_JRF_REFIT	: {WHITE}JR Freight{BLACK} Blue/White
 STR_REFIT_JRF_NLOGO	: {WHITE}JR Freight{BLACK} No Logo
 STR_REFIT_SILVER	: {WHITE}JR Freight{BLACK} Silver
 STR_REFIT_JRF_YELLOW	: {WHITE}JR Freight{BLACK} Red/Yellow
@@ -563,9 +567,9 @@ STR_REFIT_ED79_JRF			: {SILVER}ED79 {WHITE}JR Freight {BLACK}Blue/White {GOLD}(1
 
 STR_REFIT_EF58_61	: {WHITE}JNR {BLACK}Imperial Train
 STR_REFIT_EF58_BLUE	: {WHITE}JNR {BLACK}Express Blue/Cream
-STR_REFIT_EF58_EXP1	: {WHITE}JNR {BLACK}Experimental Blue/Yellow
-STR_REFIT_EF58_EXP2	: {WHITE}JNR {BLACK}Experimental Blue/Orange
-STR_REFIT_EF58_EXP3	: {WHITE}JNR {BLACK}Experimental Green
+STR_REFIT_EF58_EXP_ORANGE	: {WHITE}JNR {BLACK}Experimental Blue/Orange
+STR_REFIT_EF58_EXP_GREEN	: {WHITE}JNR {BLACK}Experimental Green
+STR_REFIT_EF58_EXP_YELLOW	: {WHITE}JNR {BLACK}Experimental Blue/Yellow
 
 STR_REFIT_EF60_NEW		: {SILVER}EF60{WHITE} JNR{BLACK} Blue {GOLD}(New Shape)
 STR_REFIT_EF60_AMERICAN	: {SILVER}EF60{WHITE} JR East{BLACK} "American Train"
@@ -600,11 +604,6 @@ STR_REFIT_EF510_300		: {SILVER}EF510-300 {WHITE}JR Freight {BLACK}Silver
 
 STR_REFIT_DF200_NEW		: {WHITE}JR Freight {GOLD}"Red Bear"
 STR_REFIT_DF200_SS		: {WHITE}JR Kyushu {GOLD}"Seven Stars"
-
-STR_REFIT_EH10		: EH10 JNR {BLACK}Black
-STR_REFIT_EH10_OLD	: EH10 JNR {BLACK}Black {GOLD}Early Version
-STR_REFIT_EH10_OBR	: EH10 JNR {BROWN}Brown {GOLD}Early Version
-STR_REFIT_EH10_HS	: EH10 JNR {BROWN}Brown {GOLD}Experimental (110km/h)
 
 STR_REFIT_EH500_1	: EH500 Early version (Low Headlights)
 STR_REFIT_EH500_2	: EH500 Early version "Kintaro Eco-Power"
