--- a/lang/english.lng
+++ b/lang/english.lng
@@ -39,8 +39,7 @@ STR_NAME_JNR_EF10_2	:EF10 New type (electric)
 STR_NAME_JNR_EF13_2	:EF13 New type (electric)
 STR_NAME_JNR_EF15	:EF15 (electric)
 STR_NAME_JNR_EF30	:EF30 (electric)
-STR_NAME_JNR_EF60	:EF60 (electric)
-STR_NAME_JNR_EF63	:EF63 (electric)
+
 STR_NAME_JNR_EF70	:EF70 (electric)
 STR_NAME_JNR_EF80	:EF80 (electric)
 STR_NAME_JNR_ED12	:ED12 (electric)
@@ -49,7 +48,9 @@ STR_NAME_JNR_ED19	:ED19 (electric)
 STR_NAME_JNR_ED50	:ED50 (electric)
 STR_NAME_JNR_ED53	:ED53 (electric)
 STR_NAME_JNR_ED54	:ED54 (electric)
-STR_NAME_JNR_ED62	:ED61 / ED62 (electric)
+STR_NAME_JNR_ED60	:ED60 (electric)
+STR_NAME_JNR_ED61	:ED61 (electric)
+STR_NAME_JNR_ED62	:ED62 (electric)
 STR_NAME_JNR_ED70	:ED70 (electric)
 STR_NAME_JNR_ED75	:ED75 / ED79 (electric)
 STR_NAME_JNR_ED76	:ED76 (electric)
@@ -61,6 +62,19 @@ STR_NAME_JNR_EF57_2	:EF57 Prototype (electric)
 STR_NAME_JNR_EF58_2	:EF58 Old type (electric)
 STR_NAME_JNR_EF18	:EF18 (electric)
 STR_NAME_JNR_EF59	:EF59 Banker (electric)
+STR_NAME_JNR_EF60_0	:EF60 Protoype (electric)
+STR_NAME_JNR_EF60_1	:EF60 (electric)
+STR_NAME_JNR_EF60_2	:EF60 New type (electric)
+STR_NAME_JNR_EF63	:EF63 (electric)
+STR_NAME_JNR_EF64_1	:EF64-0 (electric)
+STR_NAME_JNR_EF64_2	:EF64-1000 (electric)
+STR_NAME_JNR_EF65_1	:EF65-0 (electric)
+STR_NAME_JNR_EF65_2	:EF65-500 (electric)
+STR_NAME_JNR_EF65_3	:EF65-1000 (electric)
+STR_NAME_JNR_EF66_1	:EF66-0 (electric)
+STR_NAME_JNR_EF66_2	:EF66-100 (electric)
+STR_NAME_JNR_EF67_1	:EF67-0 Banker (electric)
+STR_NAME_JNR_EF67_2	:EF67-100 Banker (electric)
 STR_NAME_JNR_EH10	:EH10 (electric)
 STR_NAME_JNR_EH10_2	:EH10 Prototype (electric)
 STR_NAME_JNR_EH50	:EH50 (electric)
@@ -220,8 +234,11 @@ STR_SUFFIX_BLUE				:{BLUE}Blue
 STR_SUFFIX_BLUE_GREEN		:{BLUE}Blue/Green
 STR_SUFFIX_BLUE_WHITE		:{BLUE}Blue/White
 STR_SUFFIX_BLUE_YELLOW		:{BLUE}Blue/Yellow
+STR_SUFFIX_BLUE_CREAM		:{BLUE}Blue/Cream
+STR_SUFFIX_BLUE_2TONE		:{BLUE}Two-Tone Blue
 
 STR_SUFFIX_RED				:{RED}Red
+STR_SUFFIX_ORANGE			:{ORANGE}Orange
 STR_SUFFIX_CC				:{GREEN}Company Coloured
 
 #########
@@ -397,6 +414,8 @@ STR_SUFFIX_SAKHALIN		:{WHITE}Sakhalin Railway
 STR_SUFFIX_PRIVATE		:{WHITE}Various Private Operators
 
 
+
+
 ##################
 #SPEED   SUFFIXES#
 ##################
@@ -408,17 +427,18 @@ STR_SUFFIX_110			:{GOLD}(110 km/h)
 #NEW MODULAR STRINGS#
 #####################
 
-
-STR_SUFFIX_AIRCON	:Air Conditioned
-STR_SUFFIX_ORIGINAL	:Original
 STR_SUFFIX_YEARDEP	:{GREEN}Year-Dependent{BLACK}
 STR_SUFFIX_RANDOM	:{GREEN}Random{BLACK}
 
-STR_SUFFIX_OLDSHAPE	:{SILVER}(Old Shape)
-STR_SUFFIX_NEWSHAPE	:{SILVER}(New Shape)
+STR_SUFFIX_EXP      :{GOLD}Experimental
+STR_SUFFIX_LOGO     :{GOLD}Large Logo
 
-
-
+STR_SUFFIX_YUYU          :{GOLD}"Yuyu Salon Okayama"{BLACK}
+STR_SUFFIX_EUROLINER     :{GOLD}"Euroliner"{BLACK}
+STR_SUFFIX_TOKKYU        :{GOLD}"Tokkyu"{BLACK}
+STR_SUFFIX_TOKAIDO       :{GOLD}"Tokaido"{BLACK}
+STR_SUFFIX_RAINBOW       :{GOLD}"Super Express Rainbow"{BLACK}
+STR_SUFFIX_TWILIGHT      :{GOLD}"Twilight Express"{BLACK}
 
 STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
 STR_REFIT_CC		: {GREEN}Company Colour{BLACK}
@@ -426,12 +446,24 @@ STR_REFIT_RANDOM	: {GREEN}Random{BLACK}
 STR_REFIT_AUTOFORM	: {GREEN}Auto-Formation{BLACK}
 
 
-
 STR_REFIT_AUTOYEAR	: {GREEN}Random, Auto-Update{BLACK}
 STR_REFIT_RANDYEAR	: {GREEN}Random, Year-Dependent{BLACK}
 
 
 STR_REFIT_YEARFORM	: {GREEN}Auto-Formation, Year-Dependent{BLACK}
+
+STR_SUFFIX_AIRCON	:{SILVER}(Air Conditioned)
+STR_SUFFIX_ORIGINAL	:{SILVER}(Original)
+STR_SUFFIX_PANTOS	:{SILVER}(New Pantographs)
+STR_SUFFIX_UPGRADE	:{SILVER}(Upgraded)
+STR_SUFFIX_OLDSHAPE	:{SILVER}(Old Shape)
+STR_SUFFIX_NEWSHAPE	:{SILVER}(New Shape)
+STR_SUFFIX_REFURB	:{SILVER}(Refurbished)
+
+#####################
+#v OBSOLETE STRINGS #
+#####################
+
 
 STR_REFIT_AUTOFORM_HCC		: {GREEN}Auto-Formation{BLACK} {WHITE}Hokkaido Coal Company{BLACK} 
 STR_REFIT_AUTOFORM_JGR		: {GREEN}Auto-Formation{BLACK} {WHITE}JGR{BLACK} 
@@ -516,8 +548,6 @@ STR_REFIT_CASSIOPEIA	: {WHITE}JR East{BLACK} {GOLD}"Cassiopeia"{BLACK}
 STR_REFIT_JRF_2TONE		: {WHITE}JR Freight{BLACK} Two-Tone Blue
 STR_REFIT_TOKAIDO_GREEN	: {WHITE}JNR{BLACK} Green/Yellow {GOLD}"Tokaido"{BLACK}
 STR_REFIT_JNR_CREAM		: {WHITE}JNR{BLACK} Cream/Red
-STR_REFIT_YUYU_RED		: {WHITE}JR West{BLACK} Red/Gold {GOLD}"Yuyu Salon Okayama"{BLACK}
-STR_REFIT_YUYU_ORANGE	: {WHITE}JR West{BLACK} Orange {GOLD}"Yuyu Salon Okayama"{BLACK}
 STR_REFIT_SOUTHERNCROSS	: {WHITE}JR Kyushu{BLACK} Red/White {GOLD}"Southern Cross"{BLACK}
 STR_REFIT_OKUIZUMO		: {WHITE}JR West{BLACK} Blue/White {GOLD}"Okuizumo Orochi"{BLACK}
 STR_REFIT_NOSTALGICVIEW	: {WHITE}JR East{BLACK} Yellow/Brown {GOLD}"Nostalgic View"{BLACK}
@@ -546,14 +576,7 @@ STR_REFIT_KASHIMA		: {WHITE}Kashima Railway{BLACK} Black/White
 STR_REFIT_ED17			: {SILVER}ED17{BLACK}
 STR_REFIT_ED50			: {SILVER}ED50{BLACK}
 
-STR_REFIT_ED61_CC		: {SILVER}ED61 {GREEN}{GREEN}Company Colour{BLACK}
-STR_REFIT_ED61_BROWN	: {SILVER}ED61 {WHITE}JNR {BLACK}Brown
-STR_REFIT_ED61_BLUE		: {SILVER}ED61 {WHITE}JNR {BLACK}Blue
-STR_REFIT_ED62_CC		: {SILVER}ED62 {GREEN}{GREEN}Company Colour{BLACK}
-STR_REFIT_ED62_BROWN	: {SILVER}ED62 {WHITE}JNR {BLACK}Brown
-STR_REFIT_ED62_BLUE		: {SILVER}ED62 {WHITE}JNR {BLACK}Blue
-STR_REFIT_ED62_JRF		: {SILVER}ED62 {WHITE}JR Freight
-STR_REFIT_ED62_HAMA		: {SILVER}ED62 {WHITE}JR Freight {BLACK}"Hamamatsu Depot"
+STR_REFIT_ED62_HAMA		: {WHITE}JR Freight {BLACK}"Hamamatsu Depot"
 
 STR_REFIT_ED75_GOLD	: {SILVER}ED75 {WHITE}JR East Red/Gold "Orient Saloon"
 STR_REFIT_ED75_M1	: {SILVER}ED75 {WHITE}JR Freight Red with Stripe
@@ -595,7 +618,6 @@ STR_REFIT_EF59			: EF59 Banker
 
 STR_REFIT_EF66_100		: EF66-100 
 
-STR_REFIT_EF67			: EF67 Banker
 
 STR_REFIT_EF210_300		: EF210-300 Banker
 
