more string modularisation

--- a/lang/english.lng
+++ b/lang/english.lng
@@ -219,28 +219,6 @@ STR_SUFFIX_ARMOURED				: Armoured Van
 STR_SUFFIX_MAIL                 : Mail Van
 STR_SUFFIX_LUGGAGE              : Luggage Van
 
-#################
-#COLOUR SUFFIXES#
-#################
-STR_SUFFIX_BLACK			:{BLACK}Black
-STR_SUFFIX_BLACK_YELLOW		:{BLACK}Black/Yellow
-STR_SUFFIX_GREEN			:{GREEN}Green
-STR_SUFFIX_BROWN			:{BROWN}Brown
-STR_SUFFIX_BROWN_BLUE		:{BROWN}Brown/Blue
-STR_SUFFIX_BROWN_RED		:{BROWN}Brown/Red
-STR_SUFFIX_BROWN_CREAM		:{BROWN}Brown/Cream
-STR_SUFFIX_BROWN_GREEN		:{BROWN}Brown/Green
-STR_SUFFIX_BLUE				:{BLUE}Blue
-STR_SUFFIX_BLUE_GREEN		:{BLUE}Blue/Green
-STR_SUFFIX_BLUE_WHITE		:{BLUE}Blue/White
-STR_SUFFIX_BLUE_YELLOW		:{BLUE}Blue/Yellow
-STR_SUFFIX_BLUE_CREAM		:{BLUE}Blue/Cream
-STR_SUFFIX_BLUE_2TONE		:{BLUE}Two-Tone Blue
-
-STR_SUFFIX_RED				:{RED}Red
-STR_SUFFIX_ORANGE			:{ORANGE}Orange
-STR_SUFFIX_CC				:{GREEN}Company Coloured
-
 #########
 #SUHA 32#
 #########
@@ -396,32 +374,24 @@ STR_NAME_YO_8000		:YO 8000 Brake Van
 #COMPANY SUFFIXES#
 ##################
 
-STR_SUFFIX_JGR			:{WHITE}JGR
-STR_SUFFIX_JNR			:{WHITE}JNR
-STR_SUFFIX_JRF			:{WHITE}JR Freight
-STR_SUFFIX_JRE			:{WHITE}JR East
-STR_SUFFIX_JRC			:{WHITE}JR Central
-STR_SUFFIX_JRW			:{WHITE}JR West
-STR_SUFFIX_JRK			:{WHITE}JR Kyushu
-STR_SUFFIX_JRH			:{WHITE}JR Hokkaido
+STR_SUFFIX_JGR			:{WHITE} JGR
+STR_SUFFIX_JNR			:{WHITE} JNR
+STR_SUFFIX_JRF			:{WHITE} JR Freight
+STR_SUFFIX_JRE			:{WHITE} JR East
+STR_SUFFIX_JRC			:{WHITE} JR Central
+STR_SUFFIX_JRW			:{WHITE} JR West
+STR_SUFFIX_JRK			:{WHITE} JR Kyushu
+STR_SUFFIX_JRH			:{WHITE} JR Hokkaido
 
-STR_SUFFIX_AICHI		:{WHITE}Aichi Railway
-STR_SUFFIX_MEITETSU		:{WHITE}Meitetsu
-STR_SUFFIX_HCC			:{WHITE}Hokkaido Coal Company
-STR_SUFFIX_OIGAWA		:{WHITE}Ōigawa Railway
-STR_SUFFIX_SEIBU		:{WHITE}Seibu Railway
-STR_SUFFIX_SAKHALIN		:{WHITE}Sakhalin Railway
-STR_SUFFIX_PRIVATE		:{WHITE}Various Private Operators
-
-
+STR_SUFFIX_AICHI		:{WHITE} Aichi Railway
+STR_SUFFIX_MEITETSU		:{WHITE} Meitetsu
+STR_SUFFIX_HCC			:{WHITE} Hokkaido Coal Company
+STR_SUFFIX_OIGAWA		:{WHITE} Ōigawa Railway
+STR_SUFFIX_SEIBU		:{WHITE} Seibu Railway
+STR_SUFFIX_SAKHALIN		:{WHITE} Sakhalin Railway
+STR_SUFFIX_PRIVATE		:{WHITE} Various Private Operators
 
 
-##################
-#SPEED   SUFFIXES#
-##################
-
-STR_SUFFIX_85			:{GOLD}(85 km/h)
-STR_SUFFIX_110			:{GOLD}(110 km/h)
 
 #####################
 #NEW MODULAR STRINGS#
@@ -433,12 +403,15 @@ STR_SUFFIX_RANDOM	:{GREEN}Random{BLACK}
 STR_SUFFIX_EXP      :{GOLD}Experimental
 STR_SUFFIX_LOGO     :{GOLD}Large Logo
 
+STR_SUFFIX_IMPERIAL      :{GOLD}"Imperial Train"{BLACK}
+STR_SUFFIX_EXPRESS       :{GOLD}"Express"{BLACK}
 STR_SUFFIX_YUYU          :{GOLD}"Yuyu Salon Okayama"{BLACK}
 STR_SUFFIX_EUROLINER     :{GOLD}"Euroliner"{BLACK}
 STR_SUFFIX_TOKKYU        :{GOLD}"Tokkyu"{BLACK}
 STR_SUFFIX_TOKAIDO       :{GOLD}"Tokaido"{BLACK}
 STR_SUFFIX_RAINBOW       :{GOLD}"Super Express Rainbow"{BLACK}
 STR_SUFFIX_TWILIGHT      :{GOLD}"Twilight Express"{BLACK}
+STR_SUFFIX_HOKUTOSEI     :{GOLD}"Hokutosei"{BLACK}
 
 STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
 STR_REFIT_CC		: {GREEN}Company Colour{BLACK}
@@ -459,6 +432,32 @@ STR_SUFFIX_UPGRADE	:{SILVER}(Upgraded)
 STR_SUFFIX_OLDSHAPE	:{SILVER}(Old Shape)
 STR_SUFFIX_NEWSHAPE	:{SILVER}(New Shape)
 STR_SUFFIX_REFURB	:{SILVER}(Refurbished)
+
+#################
+#COLOUR SUFFIXES#
+#################
+STR_SUFFIX_BLACK			:{BLACK}Black
+STR_SUFFIX_BLACK_YELLOW		:{BLACK}Black/Yellow
+STR_SUFFIX_GREEN			:{GREEN}Green
+STR_SUFFIX_BROWN			:{BROWN}Brown
+STR_SUFFIX_BROWN_BLUE		:{BROWN}Brown/Blue
+STR_SUFFIX_BROWN_RED		:{BROWN}Brown/Red
+STR_SUFFIX_BROWN_CREAM		:{BROWN}Brown/Cream
+STR_SUFFIX_BROWN_GREEN		:{BROWN}Brown/Green
+STR_SUFFIX_BROWN_YELLOW		:{BROWN}Brown/Yellow
+STR_SUFFIX_BROWN_GOLD		:{BROWN}Brown/Gold
+STR_SUFFIX_BROWN_SILVER		:{BROWN}Brown/Silver
+STR_SUFFIX_BLUE				:{BLUE}Blue
+STR_SUFFIX_BLUE_GREEN		:{BLUE}Blue/Green
+STR_SUFFIX_BLUE_WHITE		:{BLUE}Blue/White
+STR_SUFFIX_BLUE_YELLOW		:{BLUE}Blue/Yellow
+STR_SUFFIX_BLUE_CREAM		:{BLUE}Blue/Cream
+STR_SUFFIX_BLUE_2TONE		:{BLUE}Two-Tone Blue
+
+STR_SUFFIX_RED				:{RED}Red
+STR_SUFFIX_ORANGE			:{ORANGE}Orange
+STR_SUFFIX_CC				:{GREEN}Company Coloured
+
 
 #####################
 #v OBSOLETE STRINGS #
