--- a/lang/english.lng
+++ b/lang/english.lng
@@ -52,8 +52,10 @@ STR_NAME_JNR_ED60	:ED60 (electric)
 STR_NAME_JNR_ED61	:ED61 (electric)
 STR_NAME_JNR_ED62	:ED62 (electric)
 STR_NAME_JNR_ED70	:ED70 (electric)
-STR_NAME_JNR_ED75	:ED75 / ED79 (electric)
+STR_NAME_JNR_ED75	:ED75 (electric)
+STR_NAME_JNR_ED75_2	:ED75-700 (electric)
 STR_NAME_JNR_ED76	:ED76 (electric)
+STR_NAME_JNR_ED79	:ED79 (electric)
 STR_NAME_JGR_EF50	:EF50 (electric)
 STR_NAME_JNR_EF53	:EF53 (electric)
 STR_NAME_JNR_EF56	:EF56 (electric)
@@ -414,6 +416,9 @@ STR_SUFFIX_TOKAIDO       :{GOLD}"Tokaido"{BLACK}
 STR_SUFFIX_RAINBOW       :{GOLD}"Super Express Rainbow"{BLACK}
 STR_SUFFIX_TWILIGHT      :{GOLD}"Twilight Express"{BLACK}
 STR_SUFFIX_HOKUTOSEI     :{GOLD}"Hokutosei"{BLACK}
+STR_SUFFIX_AKEBONO       :{GOLD}"Akebono Orient Saloon"{BLACK}
+STR_SUFFIX_PANDA         :{GOLD}"Panda"{BLACK}
+
 
 STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
 STR_REFIT_CC		: {GREEN}Company Colour{BLACK}
@@ -455,8 +460,11 @@ STR_SUFFIX_BLUE_WHITE		:{BLUE}Blue/White
 STR_SUFFIX_BLUE_YELLOW		:{BLUE}Blue/Yellow
 STR_SUFFIX_BLUE_CREAM		:{BLUE}Blue/Cream
 STR_SUFFIX_BLUE_2TONE		:{BLUE}Two-Tone Blue
-
 STR_SUFFIX_RED				:{RED}Red
+STR_SUFFIX_RED_GOLD			:{RED}Red/Gold
+STR_SUFFIX_RED_WHITE		:{RED}Red/White
+STR_SUFFIX_RED_CREAM		:{RED}Red/Cream
+STR_SUFFIX_RED_BLACK        :{RED}Red/Black
 STR_SUFFIX_ORANGE			:{ORANGE}Orange
 STR_SUFFIX_CC				:{GREEN}Company Coloured
 
