--- a/lang/english.lng
+++ b/lang/english.lng
@@ -77,11 +77,17 @@ STR_NAME_JNR_EF66_1	:EF66-0 (electric)
 STR_NAME_JNR_EF66_2	:EF66-100 (electric)
 STR_NAME_JNR_EF67_1	:EF67-0 Banker (electric)
 STR_NAME_JNR_EF67_2	:EF67-100 Banker (electric)
+STR_NAME_JNR_EF81	:EF81 (electric)
+STR_NAME_JNR_EF81_1	:EF81-300 (electric)
+STR_NAME_JNR_EF81_2	:EF81-450 (electric)
 STR_NAME_JNR_EH10	:EH10 (electric)
 STR_NAME_JNR_EH10_2	:EH10 Prototype (electric)
 STR_NAME_JNR_EH50	:EH50 (electric)
 
 STR_NAME_JR_DF200	:DF200 (diesel)
+STR_NAME_JR_EF210	:EF210 (electric)
+STR_NAME_JR_EF210_1	:EF210-100 (electric)
+STR_NAME_JR_EF210_2	:EF210-300 Banker (electric)
 STR_NAME_JR_EF500	:EF500 (electric)
 STR_NAME_JR_ED500	:ED500 (electric)
 STR_NAME_JR_EH800	:EH800 (electric)
@@ -406,6 +412,8 @@ STR_SUFFIX_RANDOM	:{GREEN}Random{BLACK}
 
 STR_SUFFIX_EXP      :{GOLD}Experimental
 STR_SUFFIX_LOGO     :{GOLD}Large Logo
+STR_SUFFIX_STRIPE   :{GOLD}Stripe
+STR_SUFFIX_WHISKERS :{GOLD}Whiskers
 
 STR_SUFFIX_IMPERIAL      :{GOLD}"Imperial Train"{BLACK}
 STR_SUFFIX_EXPRESS       :{GOLD}"Express"{BLACK}
@@ -416,8 +424,11 @@ STR_SUFFIX_TOKAIDO       :{GOLD}"Tokaido"{BLACK}
 STR_SUFFIX_RAINBOW       :{GOLD}"Super Express Rainbow"{BLACK}
 STR_SUFFIX_TWILIGHT      :{GOLD}"Twilight Express"{BLACK}
 STR_SUFFIX_HOKUTOSEI     :{GOLD}"Hokutosei"{BLACK}
+STR_SUFFIX_CASSIOPEIA    :{GOLD}"Cassiopeia"{BLACK}
 STR_SUFFIX_AKEBONO       :{GOLD}"Akebono Orient Saloon"{BLACK}
+
 STR_SUFFIX_PANDA         :{GOLD}"Panda"{BLACK}
+STR_SUFFIX_MOMOTARO      :{GOLD}"Momotaro"{BLACK}
 
 
 STR_REFIT_YEARDEP	: {GREEN}Year-Dependent{BLACK}
@@ -445,6 +456,7 @@ STR_SUFFIX_REFURB	:{SILVER}(Refurbished)
 #################
 STR_SUFFIX_BLACK			:{BLACK}Black
 STR_SUFFIX_BLACK_YELLOW		:{BLACK}Black/Yellow
+STR_SUFFIX_SILVER			:{SILVER}Silver
 STR_SUFFIX_GREEN			:{GREEN}Green
 STR_SUFFIX_BROWN			:{BROWN}Brown
 STR_SUFFIX_BROWN_BLUE		:{BROWN}Brown/Blue
@@ -456,16 +468,20 @@ STR_SUFFIX_BROWN_GOLD		:{BROWN}Brown/Gold
 STR_SUFFIX_BROWN_SILVER		:{BROWN}Brown/Silver
 STR_SUFFIX_BLUE				:{BLUE}Blue
 STR_SUFFIX_BLUE_GREEN		:{BLUE}Blue/Green
+STR_SUFFIX_BLUE_GOLD		:{BLUE}Blue/Gold
 STR_SUFFIX_BLUE_WHITE		:{BLUE}Blue/White
+STR_SUFFIX_BLUE_GREY		:{BLUE}Blue/Grey
 STR_SUFFIX_BLUE_YELLOW		:{BLUE}Blue/Yellow
 STR_SUFFIX_BLUE_CREAM		:{BLUE}Blue/Cream
 STR_SUFFIX_BLUE_2TONE		:{BLUE}Two-Tone Blue
 STR_SUFFIX_RED				:{RED}Red
 STR_SUFFIX_RED_GOLD			:{RED}Red/Gold
 STR_SUFFIX_RED_WHITE		:{RED}Red/White
+STR_SUFFIX_RED_GREY  		:{RED}Red/Grey
 STR_SUFFIX_RED_CREAM		:{RED}Red/Cream
 STR_SUFFIX_RED_BLACK        :{RED}Red/Black
 STR_SUFFIX_ORANGE			:{ORANGE}Orange
+STR_SUFFIX_PINK 			:{CREAM}Pink
 STR_SUFFIX_CC				:{GREEN}Company Coloured
 
 
