--- a/lang/english.lng
+++ b/lang/english.lng
@@ -2,8 +2,8 @@
 
 lang: 7F
 
-STR_GRF_NAME :JP+ Engines & Wagons v0.12.0
-STR_GRF_DESCRIPTION :An addon for Japan Set Trains, focused on locomotives and wagons. Includes many new locos and livery refits. Drawn by Emperor Jake, Voyager One, Davo Hunter, wicket-303, *SaYa*, Azusa257, andythenorth and the JapanSet Team. Coded by Emperor Jake, 2022 GPLv2+.
+STR_GRF_NAME :JP+ Engines & Wagons v0.12.0 
+STR_GRF_DESCRIPTION :{RED}ATTENTION!{SILVER} Must be loaded AFTER JapanSet3: Trains to work!{}{}{WHITE}JP{RED}+{WHITE}Engines & Wagons{BLACK}: Part of the {WHITE}JP{RED}+{BLACK} series, focused on locomotives, passenger coaches and freight wagons from JGR, JNR, JR and various private operators. Includes many new vehicles and livery refits. {}{}{TINYFONT}Drawn by {SILVER}Emperor Jake, Voyager One, Davo Hunter, wicket-303, *SaYa*, Azusa257, andythenorth and the JapanSet Team{}{BLACK}Coded by {SILVER}Emperor Jake{}{BLACK}{COPYRIGHT} 2023 GPLv2+.
 
 STR_PARAM_NAME_BASECOSTMODBUY	:Purchase costs
 STR_PARAM_DESC_BASECOSTMODBUY	:Adjust vehicle purchase costs, to match Japan Set
