--- a/lang/english.lng
+++ b/lang/english.lng
@@ -2,7 +2,7 @@
 
 lang: 7F
 
-STR_GRF_NAME :JP+ Engines & Wagons v0.12.0 
+STR_GRF_NAME :JP+ Engines & Wagons v0.12.1 
 STR_GRF_DESCRIPTION :{RED}ATTENTION!{SILVER} Must be loaded AFTER JapanSet3: Trains to work!{}{}{WHITE}JP{RED}+{WHITE}Engines & Wagons{BLACK}: Part of the {WHITE}JP{RED}+{BLACK} series, focused on locomotives, passenger coaches and freight wagons from JGR, JNR, JR and various private operators. Includes many new vehicles and livery refits. {}{}{TINYFONT}Drawn by {SILVER}Emperor Jake, Voyager One, Davo Hunter, wicket-303, *SaYa*, Azusa257, andythenorth and the JapanSet Team{}{BLACK}Coded by {SILVER}Emperor Jake{}{BLACK}{COPYRIGHT} 2023 GPLv2+.
 
 STR_PARAM_NAME_BASECOSTMODBUY	:Purchase costs
@@ -131,7 +131,23 @@ STR_NAME_MAIL_MANI_34	:MANI 34 Armoured Van
 STR_NAME_MAIL_30		:MANI 30 Armoured Van
 STR_NAME_MAIL_8000		:SUNI 40 / SUYU 44 / WAKI 8000 Express Van
 
+#################
+#CONCAT SUBSTRINGS#
+#standard, no space, operators
+#################
 
+STR_CONCAT_2	:{STRING} {STRING}
+STR_CONCAT_3	:{STRING} {STRING} {STRING}
+STR_CONCAT_4	:{STRING} {STRING} {STRING} {STRING}
+
+STR_CONCAT_3S	:{STRING}{STRING}{STRING}
+STR_CONCAT_4S	:{STRING}{STRING}{STRING}{STRING}
+
+STR_CONCAT_1C	:{BLACK}Operators: {STRING}
+STR_CONCAT_2C	:{BLACK}Operators: {STRING} /{STRING}
+STR_CONCAT_3C	:{BLACK}Operators: {STRING} /{STRING} /{STRING}
+STR_CONCAT_4C	:{BLACK}Operators: {STRING} /{STRING} /{STRING} /{STRING}
+STR_CONCAT_5C	:{BLACK}Operators: {STRING} /{STRING} /{STRING} /{STRING} /{STRING}
 
 #################
 #PAXMAIL  REFITS#
@@ -193,9 +209,7 @@ STR_REFIT_PAXMAIL_NAHANI8430_JGR_FLIP		: {SILVER}NAHANO 8430{BLACK} III. Class C
 STR_REFIT_MAIL_HONI8900_JGR			: {SILVER}HONI 8900{BLACK} Luggage Van (Brown)
 STR_REFIT_MAIL_HOYUNI8725_JGR		: {SILVER}HOYUNI 8725{BLACK} Mail Van (Brown)
 
-STR_CONCAT_2	:{STRING} {STRING}
-STR_CONCAT_3	:{STRING} {STRING} {STRING}
-STR_CONCAT_4	:{STRING} {STRING} {STRING} {STRING}
+
 
 ################
 #CLASS SUFFIXES#
@@ -392,6 +406,7 @@ STR_SUFFIX_JRC			:{WHITE} JR Central
 STR_SUFFIX_JRW			:{WHITE} JR West
 STR_SUFFIX_JRK			:{WHITE} JR Kyushu
 STR_SUFFIX_JRH			:{WHITE} JR Hokkaido
+STR_SUFFIX_JR			:{WHITE} JR Group
 
 STR_SUFFIX_AICHI		:{WHITE} Aichi Railway
 STR_SUFFIX_MEITETSU		:{WHITE} Meitetsu
@@ -676,40 +691,67 @@ STR_REFIT_DMT_FUKUYAMA	: Fukuyama
 STR_REFIT_DMT_FISH		: Reefer
 STR_REFIT_DMT_NITTSU	: Nittsu
 
-#####################
-#DESCRIPTION TEXT   #
-#####################
+# ####################
+# DESCRIPTION TEXT   #
+# ####################
 
-STR_DESC_NARROWGAUGE	:{BLACK}Gauge:{GOLD} Narrow/Kyōki (3ft6in/1,067mm){}
+STR_DESC_POWER_STEAM 	:{BLACK}Engine Type: {GOLD}Steam{}
+STR_DESC_POWER_DE 	    :{BLACK}Engine Type: {GOLD}Diesel Electric{}
+STR_DESC_POWER_DH    	:{BLACK}Engine Type: {GOLD}Diesel Hydraulic{}
+STR_DESC_POWER_HYBRID 	:{BLACK}Engine Type: {GOLD}Diesel Electric Hybrid{}
+STR_DESC_POWER_BATT		:{BLACK}Engine Type: {GOLD}Battery Electric{}
+STR_DESC_POWER_AC20		:{BLACK}Engine Type: {GOLD}Electric - {RED} AC (20kV){}
+STR_DESC_POWER_DC15		:{BLACK}Engine Type: {GOLD}Electric - {BLUE} DC (1500V){}
+STR_DESC_POWER_MS20		:{BLACK}Engine Type: {GOLD}Electric Multisystem - {RED} AC (20kV) {WHITE}/ {BLUE}DC (1500V){}
+STR_DESC_POWER_MS25 	:{BLACK}Engine Type: {GOLD}Electric - {RED} AC (20kV) {WHITE}/ {PURPLE} AC (25kV){}
+
+STR_DESC_NARROWGAUGE	:{BLACK}Gauge:{GOLD} Narrow {SILVER}(3ft6in/1,067mm){}
+STR_DESC_STDGAUGE	    :{BLACK}Gauge:{GOLD} Standard (4ft8.5in/1,435mm){}
 
 STR_DESC_USAGE_GP		:{BLACK}Usage: {SILVER}General Purpose{}
 STR_DESC_USAGE_LF		:{BLACK}Usage: {SILVER}Light Freight{}
+STR_DESC_USAGE_SHG		:{BLACK}Usage: {SILVER}Shunter / General Purpose{}
+STR_DESC_USAGE_SH		:{BLACK}Usage: {SILVER}Shunter{}
 STR_DESC_USAGE_HF		:{BLACK}Usage: {SILVER}Heavy Freight{}
 STR_DESC_USAGE_P		:{BLACK}Usage: {SILVER}Passenger{}
+STR_DESC_USAGE_XP		:{BLACK}Usage: {SILVER}Excursion Passenger{}
 STR_DESC_USAGE_EP		:{BLACK}Usage: {SILVER}Express Passenger{}
 STR_DESC_USAGE_EF		:{BLACK}Usage: {SILVER}Express Passenger / Heavy Freight{}
 STR_DESC_USAGE_FF		:{BLACK}Usage: {SILVER}Express Passenger / Fast Freight{}
+STR_DESC_USAGE_BANK		:{BLACK}Usage: {SILVER}Banker / Pusher{}
+STR_DESC_USAGE_PROTO	:{BLACK}Usage: {SILVER}Prototype{}
 
 
 
-STR_DESC_POWER_BATT		:{BLACK}Electric system:{GOLD} Battery{}
-STR_DESC_POWER_AC20		:{BLACK}Electric system:{RED} AC (20kV){}
-STR_DESC_POWER_DC15		:{BLACK}Electric system:{BLUE} DC (1500V){}
-STR_DESC_POWER_MS20		:{BLACK}Electric system:{RED} AC (20kV) {WHITE}/ {BLUE}DC (1500V){}
-STR_DESC_POWER_MS25 	:{BLACK}Electric system:{RED} AC (20kV) {WHITE}/ {PURPLE} AC (25kV){}
+
+
+
+# delete all below v
+
 
 
 
 STR_DESC_OPS_JGR		:{BLACK}Operators: {WHITE}JGR{}
-STR_DESC_OPS_JGR_JNR	:{BLACK}Operators: {WHITE}JGR/JNR{}
+STR_DESC_OPS_JGR_JNR	:{BLACK}Operators: {WHITE}JGR / JNR{}
 STR_DESC_OPS_JNR		:{BLACK}Operators: {WHITE}JNR{}
-STR_DESC_OPS_JNR_JR		:{BLACK}Operators: {WHITE}JNR/JR{}
-STR_DESC_OPS_JNR_JRF	:{BLACK}Operators: {WHITE}JNR/JR Freight{}
+STR_DESC_OPS_JNR_JRF	:{BLACK}Operators: {WHITE}JNR / JR Freight{}
+STR_DESC_OPS_JNR_JRE	:{BLACK}Operators: {WHITE}JNR / JR East{}
+STR_DESC_OPS_JNR_JRF_JRE	:{BLACK}Operators: {WHITE}JNR / JR Freight / JR East {}
+STR_DESC_OPS_JNR_JRF_JRH	:{BLACK}Operators: {WHITE}JNR / JR Freight / JR Hokkaido{}
+
 STR_DESC_OPS_JRF		:{BLACK}Operators: {WHITE}JR Freight{}
+STR_DESC_OPS_JRE_JRF		:{BLACK}Operators: {WHITE}JR East / JR Freight{}
+
+STR_DESC_OPS_SEIBU		:{BLACK}Operators: {WHITE}Seibu Railway{}
+STR_DESC_OPS_SEIBU_O    :{BLACK}Operators: {WHITE}Seibu Railway / Ōigawa Railway{}
+STR_DESC_OPS_AICHI_M	:{BLACK}Operators: {WHITE}Aichi Railway / Meitetsu{}
+STR_DESC_OPS_HCC		:{BLACK}Operators: {WHITE}Hokkaido Coal Company / JGR{}
+STR_DESC_OPS_JGR_S		:{BLACK}Operators: {WHITE}JGR / Sakhalin Railway{}
+STR_DESC_OPS_YAWATA		:{BLACK}Operators: {WHITE}Yawata Works / Nippon Steel{}
 
 
 
-#additional text specific
+# additional text specific
 
 STR_DESC_JNR_7100  :{BLACK}Gauge:{GOLD} Narrow/Kyōki (3ft6in/1,067mm){}{BLACK}Usage: {SILVER}General Purpose{}{}{BLACK}Operators: {WHITE}Hokkaido Coal Company / JGR{}
 
@@ -737,7 +779,7 @@ STR_DESC_SEIBU_E851	:{BLACK}Gauge:{GOLD} Narrow/Kyōki (3ft6in/1,067mm){}{BLACK}
 STR_DESC_SEIBU_E31	:{BLACK}Gauge:{GOLD} Narrow/Kyōki (3ft6in/1,067mm){}{BLACK}Electric system:{BLUE} DC (1500V){}{BLACK}Usage: {SILVER}Light Freight{}{}{BLACK}Operators: {WHITE}Seibu Railway / Ōigawa Railway{}
 
 
-#additional text generic
+#additional text generic OLD
 
 STR_DESC_JGR_ELF	:{BLACK}Gauge:{GOLD} Narrow/Kyōki (3ft6in/1,067mm){}{BLACK}Electric system:{BLUE} DC (1500V){}{BLACK}Usage: {SILVER}Light Freight{}{}{BLACK}Operators: {WHITE}JGR / JNR{}
 
